Fixed chambers bay on mobile

--- a/ellingson/sample.css
+++ b/ellingson/sample.css
@@ -150,21 +150,20 @@ form {
 
 .sec_1 {
 	background-color: white;
-	text-align: left;
+	text-align: center;
 	padding-top: 3%;
 	padding-bottom: 3%;
 }
 
 .blb {
-	margin-left: 8%;
 	display: inline-block;
 }
 
 .sec_1_sub {
 	display: inline-block;
-	padding-left: 6%;
 	font-weight: bold;
 	vertical-align: middle;
+
 }
 
 .sec_2 {
@@ -226,8 +225,28 @@ form {
 
 /*Tablet*/
 @media (min-width: 768px) { 
-	.logo {
+.logo {
+display: inline-block;
+}
+
+.sec_1 {
+background-color: white;
+text-align: left;
+padding-top: 3%;
+padding-bottom: 3%;
+}
+
+.blb {
+	margin-left: 8%;
 	display: inline-block;
+}
+
+.sec_1_sub {
+	display: inline-block;
+	padding-left: 6%;
+	font-weight: bold;
+	vertical-align: middle;
+
 }
 }
 
